Updated the LinkedIn profile

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: AlbertBGeorge
   instagram: albertbgeorge
-  linkedin: in/AlbertBGeorge
+  linkedin: AlbertBGeorge
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: AlbertBGeorge
