Changed the designation

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Albert B George
 
 # Short bio or description (displayed in the header)
-description: Full Stack Web Developer
+description: Web developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/10909732?v=4&s=460
